fix project img width on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -456,36 +456,15 @@ nav {
         min-height: 100vh;
         padding: 0 10% 10% 10%;
 
-        // @media (min-width: 751px) and (max-width: 1380px) {
-        //     height: 750px;
-
-        //     .feature {
-        //         height: 750px;
-        //     }
-        // }
-
         @media (max-width: 750px) {
-            height: 200vh;
+            min-height: 400vh;
         }
-
-        // // fix projects height for small mobile screens
-        // @media (max-height: 675px) and (max-width: 750px) {
-        //     height: 1600px;
-
-        //     .feature {
-        //         height: 1600px;
-        //     }
-        // }
-
-        // @media (max-height: 575px) and (max-width: 750px) {
-        //     height: 1300px;
-        // }
 
         .container {
             height: 100%;
 
             .projects-header {
-                height: 10%;
+                height: 148px;
                 font-weight: 700;
                 font-size: 2.2rem;
                 text-transform: capitalize;
@@ -493,15 +472,11 @@ nav {
                 letter-spacing: 2px;
                 padding-top: 48px;
                 opacity: 0;
-
-                @media (max-width: 750px) {
-                    height: 6.5%;
-                }
             }
 
             .feature {
                 padding-top: 5rem;
-                height: 90%;
+                height: calc(100% - 48px);
 
                 @for $i from 1 through 6 {
                     .feature-project {
@@ -566,13 +541,8 @@ nav {
                             @media (max-width: 750px) {
                                 width: 100%;
                                 height: 16.5%;
-                                padding: 0 5rem 0.75rem;
+                                padding: 0.75rem 0;
                             }
-
-                            // @media(max-width: 575px) {
-                            //     padding: 0;
-                            //     padding-bottom: 1.5rem;
-                            // }
 
                             .feature-img-container {
                                 position: relative;
